tests/Project2/student_test/test_2_s04.out
Error type 9 at Line 19: invalid argument number for sum, expect 2, got 3
Error type 5 at Line 23: unmatching type on both sides of assignment
